Support pausing inputs (#1798)
