# src/routes.rs
@@ -26,13 +26,15 @@ pub mod control_request;
 pub mod register_request;
 pub mod status;
 pub mod unregister_request;
+pub mod update_input;
 pub mod update_output;
 pub mod ws;
 
 pub fn routes(state: Arc<ApiState>) -> Router {
     let inputs = Router::new()
         .route("/:id/register", post(register_request::handle_input))
-        .route("/:id/unregister", post(unregister_request::handle_input));
+        .route("/:id/unregister", post(unregister_request::handle_input))
+        .route("/:id/update", post(update_input::handle_input_update));
 
     let outputs = Router::new()
         .route("/:id/register", post(register_request::handle_output))
